// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders the nav with buttons 1`] = `
<div>
  <nav
    class="lbh-simple-pagination"
  >
    <button
      class="lbh-simple-pagination__link"
      type="button"
    >
      <svg
        fill="none"
        height="19"
        viewBox="0 0 11 19"
        width="11"
      >
        <path
          d="M10 1L2 9.5L10 18"
          stroke-width="2"
        />
      </svg>
      Prev
    </button>
    <button
      class="lbh-simple-pagination__link lbh-simple-pagination__link--next"
      type="button"
    >
      Next
      <svg
        fill="none"
        height="19"
        viewBox="0 0 11 19"
        width="11"
      >
        <path
          d="M1 18L9 9.5L1 1"
          stroke-width="2"
        />
      </svg>
    </button>
  </nav>
</div>
`;

exports[`it renders the nav with buttons and titles 1`] = `
<div>
  <nav
    class="lbh-simple-pagination"
  >
    <button
      class="lbh-simple-pagination__link"
      type="button"
    >
      <svg
        fill="none"
        height="19"
        viewBox="0 0 11 19"
        width="11"
      >
        <path
          d="M10 1L2 9.5L10 18"
          stroke-width="2"
        />
      </svg>
      Prev
      <span
        class="lbh-simple-pagination__title"
      >
        1 of 3
      </span>
    </button>
    <button
      class="lbh-simple-pagination__link lbh-simple-pagination__link--next"
      type="button"
    >
      Next
      <span
        class="lbh-simple-pagination__title"
      >
        3 of 3
      </span>
      <svg
        fill="none"
        height="19"
        viewBox="0 0 11 19"
        width="11"
      >
        <path
          d="M1 18L9 9.5L1 1"
          stroke-width="2"
        />
      </svg>
    </button>
  </nav>
</div>
`;
